--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8"> <meta name="Description" content="sample web-designing"> <meta name="keyword" content="freezr, freezr.w3spaces.com, freezr.w3spaces"> <meta name="author" content="VIGNESH, vignesh A, VIGNESH A"> <meta name="viewport" content="width=device-width, initial-scale=1.0">  
-        <link rel="stylesheet" href="styles.css">
+        <!-- <link rel="stylesheet" href="styles.css"> -->
         <link rel="stylesheet" href="csssheet.css">
         <!-- font awesome icons link -->
         <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
@@ -28,7 +28,7 @@
         <div class="navm">
             <ul class="ul">
                 <li> <a href="index.html"><i class="fas fa-home"></i></a></li>
-                <li> <a href="Sample.html"><i class="fad fa-comment-exclamation"></i> </a></li>
+                <li><a href="Sample.html"><i class="fad fa-comment-exclamation"></i> </a></li>
                 <li> <i class="fas fa-concierge-bell"></i> <ul> 
                     <li> <a href="COD.html"><i class="far fa-money-bill-alt"></i> </a></li>
                     <li><a href="PS.html"><i class="fab fa-amazon-pay"></i></a></li>
